...
    }
    
    private var buttonLabel: String {
        if case .signingUp = interfaceState {
            return "Signing Up..."
        } else {
            return "Sign Up"
        }
    }
    
    var body: some View {
        VStack(spacing: 20) {
            Text("Sign up for an account.")
                .font(.body)
                .fontDesign(.rounded)
                .multilineTextAlignment(.center)
            
            CredentialFormView(emailAddress: $emailAddress, password: $password)
                .disabled(!fieldsAreEnabled)
...
